--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:rowCount="5">
 
         <Button
-            android:id="@+id/button16"
+            android:id="@+id/new_game"
             android:layout_width="206dp"
             android:layout_height="66dp"
             android:layout_marginBottom="50dp"
