--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -1,251 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#ffffff"
+    android:orientation="vertical"
     tools:context=".NewGame">
-
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/choose_level_label"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/choose_level_label"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="@string/choose_level_label"
-                android:textSize="40sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_weight="1.04"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/board_size_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/board_size_label"
-                android:textSize="22sp"
-                app:layout_column="0"
-                app:layout_row="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="1.04">
-
-            <Button
-                android:id="@+id/easy_board_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:elevation="0dp"
-                android:onClick="easyBoard"
-                android:text="@string/easy_button"
-                app:layout_column="0"
-                app:layout_row="2" />
-
-            <Button
-                android:id="@+id/medium_board_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:onClick="mediumBoard"
-                android:text="@string/medium_button"
-                app:layout_column="1"
-                app:layout_row="2" />
-
-            <Button
-                android:id="@+id/hard_board_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="hardBoard"
-                android:text="@string/hard_button"
-                app:layout_column="2"
-                app:layout_row="2" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_weight="1.04"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/time_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/time_label"
-                android:textSize="22sp"
-                app:layout_column="0"
-                app:layout_row="3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="1.04"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/easy_time_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="easyTime"
-                android:text="@string/easy_button"
-                app:layout_column="0"
-                app:layout_row="4" />
-
-            <Button
-                android:id="@+id/medium_time_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:onClick="mediumTime"
-                android:text="@string/medium_button"
-                app:layout_column="1"
-                app:layout_row="4" />
-
-            <Button
-                android:id="@+id/hard_time_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="hardTime"
-                android:text="@string/hard_button"
-                app:layout_column="2"
-                app:layout_row="4" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_weight="1.04"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/math_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/math_problems_label"
-                android:textSize="22sp"
-                app:layout_column="0"
-                app:layout_row="5" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="1.04"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/easy_math_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="easyMath"
-                android:text="@string/easy_button"
-                app:layout_column="0"
-                app:layout_row="6" />
-
-            <Button
-                android:id="@+id/medium_math_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:onClick="mediumMath"
-                android:text="@string/medium_button"
-                app:layout_column="1"
-                app:layout_row="6" />
-
-            <Button
-                android:id="@+id/hard_math_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="hardMath"
-                android:text="@string/hard_button"
-                app:layout_column="2"
-                app:layout_row="6" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="0.9"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/backToMain_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:onClick="backToMainActivity"
-                android:text="@string/back_button" />
-
-            <Button
-                android:id="@+id/start_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="60dp"
-                android:layout_weight="1"
-                android:text="@string/start_button"
-                app:layout_column="2"
-                app:layout_row="7" />
-        </LinearLayout>
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="@string/choose_level_label"
+            android:textSize="40sp" />
     </LinearLayout>
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_weight="1.04"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/board_size_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/board_size_label"
+            android:textSize="22sp"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_weight="1.04">
+
+        <Button
+            android:id="@+id/easy_board_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:elevation="0dp"
+            android:onClick="easyBoard"
+            android:text="@string/easy_button"
+            app:layout_column="0"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/medium_board_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:onClick="mediumBoard"
+            android:text="@string/medium_button"
+            app:layout_column="1"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/hard_board_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="hardBoard"
+            android:text="@string/hard_button"
+            app:layout_column="2"
+            app:layout_row="2" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_weight="1.04"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/time_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/time_label"
+            android:textSize="22sp"
+            app:layout_column="0"
+            app:layout_row="3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_weight="1.04"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/easy_time_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="easyTime"
+            android:text="@string/easy_button"
+            app:layout_column="0"
+            app:layout_row="4" />
+
+        <Button
+            android:id="@+id/medium_time_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:onClick="mediumTime"
+            android:text="@string/medium_button"
+            app:layout_column="1"
+            app:layout_row="4" />
+
+        <Button
+            android:id="@+id/hard_time_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="hardTime"
+            android:text="@string/hard_button"
+            app:layout_column="2"
+            app:layout_row="4" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_weight="1.04"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/math_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/math_problems_label"
+            android:textSize="22sp"
+            app:layout_column="0"
+            app:layout_row="5" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_weight="1.04"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/easy_math_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="easyMath"
+            android:text="@string/easy_button"
+            app:layout_column="0"
+            app:layout_row="6" />
+
+        <Button
+            android:id="@+id/medium_math_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:onClick="mediumMath"
+            android:text="@string/medium_button"
+            app:layout_column="1"
+            app:layout_row="6" />
+
+        <Button
+            android:id="@+id/hard_math_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="hardMath"
+            android:text="@string/hard_button"
+            app:layout_column="2"
+            app:layout_row="6" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_weight="0.9"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/backToMain_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:onClick="backToMainActivity"
+            android:text="@string/back_button" />
+
+        <Button
+            android:id="@+id/start_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="60dp"
+            android:layout_weight="1"
+            android:onClick="switchToGameActivity"
+            android:text="@string/start_button"
+            app:layout_column="2"
+            app:layout_row="7" />
+    </LinearLayout>
+</LinearLayout>
