--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -1,66 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    tools:context=".NewGame">
+    android:background="#ffffff">
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/choose_level_label"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_span="3"
             android:gravity="center"
             android:text="@string/choose_level_label"
             android:textSize="40sp" />
-    </LinearLayout>
+    </TableRow>
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_weight="1.04"
-        android:orientation="horizontal">
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/board_size_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_span="3"
             android:text="@string/board_size_label"
-            android:textSize="22sp"
-            app:layout_column="0"
-            app:layout_row="1" />
+            android:textSize="22sp" />
+    </TableRow>
 
-    </LinearLayout>
-
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_weight="1.04">
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/easy_board_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:elevation="0dp"
             android:onClick="easyBoard"
-            android:text="@string/easy_button"
-            app:layout_column="0"
-            app:layout_row="2" />
+            android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_board_btn"
@@ -70,9 +63,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:onClick="mediumBoard"
-            android:text="@string/medium_button"
-            app:layout_column="1"
-            app:layout_row="2" />
+            android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_board_btn"
@@ -80,38 +71,32 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="hardBoard"
-            android:text="@string/hard_button"
-            app:layout_column="2"
-            app:layout_row="2" />
+            android:text="@string/hard_button" />
+    </TableRow>
 
-    </LinearLayout>
-
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_weight="1.04"
-        android:orientation="horizontal">
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/time_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_span="3"
             android:text="@string/time_label"
-            android:textSize="22sp"
-            app:layout_column="0"
-            app:layout_row="3" />
-    </LinearLayout>
+            android:textSize="22sp" />
+    </TableRow>
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_weight="1.04"
-        android:orientation="horizontal">
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/easy_time_btn"
@@ -119,9 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="easyTime"
-            android:text="@string/easy_button"
-            app:layout_column="0"
-            app:layout_row="4" />
+            android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_time_btn"
@@ -131,9 +114,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:onClick="mediumTime"
-            android:text="@string/medium_button"
-            app:layout_column="1"
-            app:layout_row="4" />
+            android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_time_btn"
@@ -141,38 +122,33 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="hardTime"
-            android:text="@string/hard_button"
-            app:layout_column="2"
-            app:layout_row="4" />
+            android:text="@string/hard_button" />
+    </TableRow>
 
-    </LinearLayout>
-
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_weight="1.04"
-        android:orientation="horizontal">
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/math_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_span="3"
             android:text="@string/math_problems_label"
-            android:textSize="22sp"
-            app:layout_column="0"
-            app:layout_row="5" />
-    </LinearLayout>
+            android:textSize="22sp" />
+    </TableRow>
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_weight="1.04"
-        android:orientation="horizontal">
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/easy_math_btn"
@@ -180,21 +156,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="easyMath"
-            android:text="@string/easy_button"
-            app:layout_column="0"
-            app:layout_row="6" />
+            android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_math_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:onClick="mediumMath"
-            android:text="@string/medium_button"
-            app:layout_column="1"
-            app:layout_row="6" />
+            android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_math_btn"
@@ -202,24 +174,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="hardMath"
-            android:text="@string/hard_button"
-            app:layout_column="2"
-            app:layout_row="6" />
-    </LinearLayout>
+            android:text="@string/hard_button" />
+    </TableRow>
 
-    <LinearLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_weight="0.9"
-        android:orientation="horizontal">
+        android:layout_weight="1">
 
         <Button
             android:id="@+id/backToMain_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
             android:onClick="backToMainActivity"
             android:text="@string/back_button" />
@@ -228,12 +196,9 @@
             android:id="@+id/start_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="30dp"
             android:layout_weight="1"
             android:onClick="switchToGameActivity"
-            android:text="@string/start_button"
-            app:layout_column="2"
-            app:layout_row="7" />
-    </LinearLayout>
-</LinearLayout>
+            android:text="@string/start_button" />
+    </TableRow>
+</TableLayout>
