--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,9 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="100dp"
-            android:layout_toRightOf="@+id/moves"
-            android:text="TIMER"
+            android:layout_toRightOf="@+id/moves_number"
+            android:text="00:00"
             android:textSize="30sp" />
 
         <TextView
@@ -28,8 +27,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="MOVES"
+            android:text="@string/moves_count"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/moves_number"
+            android:layout_width="55dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/moves"
+            android:layout_marginEnd="80dp"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/moves"
+            android:text="0"
             android:textSize="30sp" />
     </RelativeLayout>
 
