--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,8 @@
             android:layout_height="70dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
-            android:text="@string/button3"
+            android:onClick="quitApp"
+            android:text="@string/exit"
             app:layout_column="0"
             app:layout_row="3" />
     </TableRow>
