Added option for no time goal and Casual font

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -17,6 +17,7 @@
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="casual"
             android:text="@string/time"
             android:textSize="45sp" />
 
@@ -27,6 +28,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
             android:layout_toEndOf="@+id/timeText"
+            android:fontFamily="casual"
             android:text="@string/initial_time"
             android:textSize="45sp" />
 
@@ -43,6 +45,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:horizontalSpacing="6dp"
+            android:numColumns="3"
             android:scrollbars="none"
             android:stretchMode="columnWidth"
             android:verticalSpacing="2dp" />
@@ -59,43 +62,50 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:layout_marginStart="20dp"
+            android:fontFamily="casual"
             android:text="@string/moves_count"
             android:textSize="45sp" />
 
         <TextView
             android:id="@+id/moves_number"
-            android:layout_width="55dp"
+            android:layout_width="77dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_toEndOf="@+id/movesText"
+            android:fontFamily="casual"
             android:text="@string/initial_moves_count"
-            android:textSize="45sp" />
+            android:textSize="45sp"
+            tools:text="0" />
+
     </RelativeLayout>
 
-    <RelativeLayout
+    <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.98"
-        android:gravity="center">
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_weight="0.98">
 
         <Button
-            android:id="@+id/backToMain"
-            android:layout_width="wrap_content"
+            android:id="@+id/backToNG"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:onClick="backToMain"
-            android:text="@string/main_menu" />
+            android:layout_marginEnd="15dp"
+            android:layout_weight="1"
+            android:minLines="1"
+            android:onClick="back"
+            android:text="@string/change_level" />
 
         <Button
             android:id="@+id/tryAgain"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_toEndOf="@+id/backToMain"
+            android:layout_marginStart="15dp"
+            android:layout_weight="1"
             android:onClick="restartActivity"
             android:text="@string/try_again" />
-
-    </RelativeLayout>
+    </TableRow>
 
 </LinearLayout>
