--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    tools:context=".MainActivity">
+    android:background="@drawable/background_main"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".activity.MainMenu">
 
-    <TableRow
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         android:layout_weight="1"
-        android:gravity="center">
+        android:contentDescription="@string/logo"
+        android:src="@drawable/logo" />
 
-        <Button
-            android:id="@+id/new_game_btn"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:onClick="switchToNewGameActivity"
-            android:text="@string/new_game"
-            app:layout_column="0"
-            app:layout_row="1" />
-    </TableRow>
+    <Button
+        android:id="@+id/new_game_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="280dp"
+        android:layout_height="85dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:background="@drawable/mybutton"
+        android:fontFamily="casual"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="switchToNewGameActivity"
+        android:text="@string/new_game"
+        app:layout_column="0"
+        app:layout_row="1" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center">
+    <Button
+        android:id="@+id/settings_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="170dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/mybutton"
+        android:fontFamily="casual"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="switchToSettingsActivity"
+        android:text="@string/settings"
+        app:layout_column="0"
+        app:layout_row="2" />
 
-        <Button
-            android:id="@+id/settings_btn"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:onClick="switchToSettingsActivity"
-            android:text="@string/settings"
-            app:layout_column="0"
-            app:layout_row="2" />
-    </TableRow>
+    <Button
+        android:id="@+id/exit_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="110dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:background="@drawable/mybutton"
+        android:fontFamily="casual"
+        android:foreground="?attr/selectableItemBackground"
+        android:onClick="quitApp"
+        android:text="@string/exit"
+        app:layout_column="0"
+        app:layout_row="3" />
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="200dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="60dp"
-            android:onClick="quitApp"
-            android:text="@string/exit"
-            app:layout_column="0"
-            app:layout_row="3" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
-
-</TableLayout>
+</LinearLayout>
