--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/NewGame_Table"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="@drawable/background_newgame">
 
     <TableRow
         android:layout_width="match_parent"
@@ -22,25 +24,29 @@
             android:fontFamily="casual"
             android:gravity="center"
             android:text="@string/choose_level_label"
-            android:textSize="40sp" />
+            android:textAllCaps="false"
+            android:textColor="@color/colorMainText"
+            android:textSize="40sp"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="35dp"
-        android:layout_marginStart="35dp"
         android:layout_weight="1"
-        android:gravity="center_vertical">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/board_size_label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="3"
             android:fontFamily="casual"
+            android:gravity="center"
             android:text="@string/board_size_label"
-            android:textSize="22sp" />
+            android:textColor="@color/colorMainText"
+            android:textSize="27sp"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
@@ -52,27 +58,41 @@
 
         <Button
             android:id="@+id/easy_board_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="easyBoard"
             android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_board_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="mediumBoard"
             android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_board_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="hardBoard"
             android:text="@string/hard_button" />
     </TableRow>
@@ -80,19 +100,20 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="35dp"
-        android:layout_marginStart="35dp"
         android:layout_weight="1"
-        android:gravity="center_vertical">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/math_label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="3"
             android:fontFamily="casual"
+            android:gravity="center"
             android:text="@string/math_problems_label"
-            android:textSize="22sp" />
+            android:textColor="@color/colorMainText"
+            android:textSize="27sp"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
@@ -105,27 +126,41 @@
 
         <Button
             android:id="@+id/easy_math_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="easyMath"
             android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_math_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="mediumMath"
             android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_math_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="hardMath"
             android:text="@string/hard_button" />
     </TableRow>
@@ -134,19 +169,20 @@
         android:id="@+id/timeText_Row"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="35dp"
-        android:layout_marginStart="35dp"
         android:layout_weight="1"
-        android:gravity="center_vertical">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/time_label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_span="3"
             android:fontFamily="casual"
+            android:gravity="center"
             android:text="@string/time_label"
-            android:textSize="22sp" />
+            android:textColor="@color/colorMainText"
+            android:textSize="27sp"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
@@ -160,27 +196,41 @@
 
         <Button
             android:id="@+id/easy_time_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginEnd="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="easyTime"
             android:text="@string/easy_button" />
 
         <Button
             android:id="@+id/medium_time_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="mediumTime"
             android:text="@string/medium_button" />
 
         <Button
             android:id="@+id/hard_time_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginStart="6dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="hardTime"
             android:text="@string/hard_button" />
     </TableRow>
@@ -194,19 +244,36 @@
 
         <Button
             android:id="@+id/backToMain_NG"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="backToMainActivity"
-            android:text="@string/back_button" />
+            android:text="@string/back_to_main"
+            tools:layout_editor_absoluteX="41dp"
+            tools:layout_editor_absoluteY="20dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="2" />
 
         <Button
             android:id="@+id/start_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
+            android:background="@drawable/mybutton"
+            android:fontFamily="casual"
+            android:foreground="?attr/selectableItemBackground"
             android:onClick="switchToGameActivity"
-            android:text="@string/start_button" />
+            android:text="@string/start_button"
+            tools:layout_editor_absoluteX="191dp"
+            tools:layout_editor_absoluteY="23dp" />
+
     </TableRow>
 </TableLayout>
