--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#7655a7</color>
+    <color name="colorButtonChosen">#bcaad4</color>
+    <color name="colorSettingsText">#564a45</color>
+    <color name="colorMainText">#662200</color>
+    <color name="colorTextLight">#edc678</color>
+    <color name="colorSpinnerBody">#ccccff</color>
+    <color name="colorDialog">#ffc266</color>
 
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
